Fix accountName overflow

--- a/src/components/networkAccountSelector/style.less
+++ b/src/components/networkAccountSelector/style.less
@@ -123,7 +123,6 @@
             .accountName {
                 overflow: hidden;
                 text-overflow: ellipsis;
-                max-width: 80%;
             }
             &:hover {
                 background-color: rgba(128, 46, 255, 0.10);
